--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "yawenwangecho"
+  github           : #"yawenwangecho"
   google_plus      :
   keybase          :
   instagram        :
